--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 numpy==1.19.0
 pandas==1.0.5
+PyMySQL==0.9.3
 python-dateutil==2.8.1
 pytz==2020.1
 requests==2.24.0
