--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
+Flask-Caching==1.9.0
+Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
 idna==2.9
 itsdangerous==1.1.0
