--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+aniso8601==8.0.0
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 Flask-Caching==1.9.0
+Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
 idna==2.9
