--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 Flask-Caching==1.9.0
+Flask-Login==0.5.0
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
