--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ aniso8601==8.0.0
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+dnspython==2.0.0
+email-validator==1.1.1
 Flask==1.1.2
 Flask-Caching==1.9.0
+Flask-JWT-Extended==3.24.1
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
@@ -18,6 +21,7 @@ Mako==1.1.3
 MarkupSafe==1.1.1
 numpy==1.19.0
 pandas==1.0.5
+PyJWT==1.7.1
 PyMySQL==0.9.3
 python-dateutil==2.8.1
 python-editor==1.0.4
