--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 alembic==1.4.2
 aniso8601==8.0.0
+Babel==2.8.0
+blinker==1.4
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 dnspython==2.0.0
 email-validator==1.1.1
 Flask==1.1.2
+Flask-BabelEx==0.9.4
 Flask-Caching==1.9.0
 Flask-JWT-Extended==3.24.1
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
+Flask-Principal==0.4.0
 Flask-RESTful==0.3.8
 Flask-Script==2.0.6
+Flask-Security==3.0.0
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
 idna==2.9
@@ -21,6 +27,7 @@ Mako==1.1.3
 MarkupSafe==1.1.1
 numpy==1.19.0
 pandas==1.0.5
+passlib==1.7.2
 PyJWT==1.7.1
 PyMySQL==0.9.3
 python-dateutil==2.8.1
@@ -28,6 +35,7 @@ python-editor==1.0.4
 pytz==2020.1
 requests==2.24.0
 six==1.15.0
+speaklater==1.3
 SQLAlchemy==1.3.17
 urllib3==1.25.9
 Werkzeug==1.0.1
