--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ Flask-Script==2.0.6
 Flask-Security==3.0.0
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
+gevent==20.6.2
+greenlet==0.4.16
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -43,3 +45,5 @@ SQLAlchemy==1.3.17
 urllib3==1.25.9
 Werkzeug==1.0.1
 WTForms==2.3.1
+zope.event==4.4
+zope.interface==5.1.0
