--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ six==1.15.0
 speaklater==1.3
 SQLAlchemy==1.3.17
 urllib3==1.25.9
+waitress==1.4.4
 Werkzeug==1.0.1
 WTForms==2.3.1
 zope.event==4.4
