updated nginx config

--- a/nginx/app_nginx.conf
+++ b/nginx/app_nginx.conf
@@ -1,22 +1,22 @@
-http{
+events {}
 
-  # Timeout value for keep-alive connections with the client
+# The http block defines how NGINX should handle HTTP traffic.
+http {
+
+# Timeout value for keep-alive connections with the client
   keepalive_timeout  65;
 
+# Following configurations are for serving static content and as a reverse proxy.
   server {
+      listen 80;
+      server_name www.openbroadwaydata.com;
 
-    listen 80;
-    server_name production;
-    charset utf-8; client_max_body_size 75M;
+      # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
+      location / {
+          # Define the location of the proxy server to send the request to
+          proxy_pass http://0.0.0.0:5010;
 
-    location / {
-        include uwsgi_params;
-        uwsgi_pass unix:/var/www/myapp/myapp_uwsgi.sock;
-    }
-
-    location /static {
-        root /var/www/myapp/;
+          proxy_set_header Host $host;
       }
-
-    }
+  }
 }
