updated nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,21 @@
-server {
-    listen 80;
-    server_name www.openbroadwaydata.com;
+events {}
 
-    # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
-    location / {
-        # Define the location of the proxy server to send the request to
-        proxy_pass http://0.0.0.0:5010;
-    }
+# The http block defines how NGINX should handle HTTP traffic.
+http {
+
+# Timeout value for keep-alive connections with the client
+  keepalive_timeout  65;
+
+# Following configurations are for serving static content and as a reverse proxy.
+  server {
+      listen 80;
+      server_name www.openbroadwaydata.com;
+
+      # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
+      location / {
+          # Define the location of the proxy server to send the request to
+          proxy_pass http://0.0.0.0:5010;
+          
+      }
+  }
 }
