--- a/nginx/app_nginx.conf
+++ b/nginx/app_nginx.conf
@@ -16,7 +16,8 @@ http {
           # Define the location of the proxy server to send the request to
           proxy_pass http://0.0.0.0:5010;
 
-          proxy_set_header Host $host;
+          include proxy_params;
+          # proxy_set_header Host $host;
       }
   }
 }
