--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,8 @@ http {
       location / {
           # Define the location of the proxy server to send the request to
           proxy_pass http://0.0.0.0:5010;
-          
+          include proxy_params;
+            # proxy_set_header Host $host;
       }
   }
 }
