--- a/nginx/certbot.conf
+++ b/nginx/certbot.conf
@@ -1,5 +1,5 @@
 # domains to retrieve certificate
-domains = openbroadwaydata.com
+domains = www.openbroadwaydata.com
 
 # increase key size
 rsa-key-size = 4096
@@ -8,7 +8,7 @@ rsa-key-size = 4096
 server = https://acme-v02.api.letsencrypt.org/directory
 
 # the email to receive renewal reminders, IIRC
-email = yaakovbressler@gmail.com 
+email = yaakovbressler@gmail.com
 
 # turn off the ncurses UI, we want this to be run as a cronjob
 text = True
