--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
 # Following configurations are for serving static content and as a reverse proxy.
   server {
       listen 80;
-      server_name www.openbroadwaydata.com;
+      server_name openbroadwaydata.com;
 
       # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
       location / {
@@ -17,6 +17,25 @@ http {
           proxy_pass http://0.0.0.0:5010;
           # The following allows flask to send urls to the domain name;
           proxy_set_header Host $host;
+
+          # Automatically route HTTP to HTTPS
+          return 301 https://$server_name$request_uri;
+
       }
   }
+  server {
+    listen 443 ssl;
+    server_name openbroadwaydata.com;
+    ssl_certificate "/etc/letsencrypt/live/yourdomain.com/fullchain.pem";
+    ssl_certificate_key "/etc/letsencrypt/live/yourdomain.com/privkey.pem";
+
+    add_header Strict-Transport-Security "max-age=31536000";
+    #other headers
+    location / {
+      autoindex on;
+      root /openbroadwaydata.com/build/; #root path of your domain's index file
+      index index.html;
+      try_files $uri $uri/ /index.html;
+    }
+
 }
