revised nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,7 +19,7 @@ http {
           proxy_set_header Host $host;
 
           # Automatically route HTTP to HTTPS
-          # return 301 https://$server_name$request_uri;
+          return 301 https://$server_name$request_uri;
 
       }
   }
