less is more in the config?

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,12 +32,12 @@ http {
 
       add_header Strict-Transport-Security "max-age=31536000";
       #other headers
-      location / {
-          autoindex on;
-          root /openbroadwaydata.com/build/; #root path of your domain's index file
-          index index.html;
-          try_files $uri $uri/ /index.html;
-      }
+      # location / {
+          # autoindex on;
+          # root /openbroadwaydata.com/build/; #root path of your domain's index file
+          # index index.html;
+          # try_files $uri $uri/ /index.html;
+      # }
   }
 
 }
