copy http format for ssl

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,7 +30,16 @@ http {
       ssl_certificate "/etc/letsencrypt/live/openbroadwaydata.com/fullchain.pem";
       ssl_certificate_key "/etc/letsencrypt/live/openbroadwaydata.com/privkey.pem";
 
-      add_header Strict-Transport-Security "max-age=31536000";
+      location / {
+          # Define the location of the proxy server to send the request to
+          proxy_pass http://0.0.0.0:5010;
+          # The following allows flask to send urls to the domain name;
+          proxy_set_header Host $host;
+
+      }
+
+
+      # add_header Strict-Transport-Security "max-age=31536000";
       #other headers
       # location / {
           # autoindex on;
