--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,11 +13,18 @@ http {
 
       # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
       location / {
-          # Define the location of the proxy server to send the request to
-          proxy_pass http://0.0.0.0:5010;
-          # The following allows flask to send urls to the domain name;
-          proxy_set_header Host $host;
+          # Automatically route HTTP to HTTPS
+          return 301 https://$server_name$request_uri;
 
+      }
+  }
+
+  server {
+      listen 80;
+      server_name www.openbroadwaydata.com;
+
+      # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
+      location / {
           # Automatically route HTTP to HTTPS
           return 301 https://$server_name$request_uri;
 
