--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,16 +44,19 @@ http {
           proxy_set_header Host $host;
 
       }
-
-
-      # add_header Strict-Transport-Security "max-age=31536000";
-      #other headers
-      # location / {
-          # autoindex on;
-          # root /openbroadwaydata.com/build/; #root path of your domain's index file
-          # index index.html;
-          # try_files $uri $uri/ /index.html;
-      # }
   }
+  server {
+      listen 443 ssl;
+      server_name www.openbroadwaydata.com;
+      ssl_certificate "/etc/letsencrypt/live/openbroadwaydata.com/fullchain.pem";
+      ssl_certificate_key "/etc/letsencrypt/live/openbroadwaydata.com/privkey.pem";
+
+      location / {
+          # Define the location of the proxy server to send the request to
+          proxy_pass http://0.0.0.0:5010;
+          # The following allows flask to send urls to the domain name;
+          proxy_set_header Host $host;
+
+      }
 
 }
