specify the location of the certificate

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
 # Timeout value for keep-alive connections with the client
   keepalive_timeout  65;
 
-# Following configurations are for serving static content and as a reverse proxy.
+  # Redirect http traffic
   server {
       listen 80;
       server_name openbroadwaydata.com;
@@ -31,12 +31,14 @@ http {
       }
   }
 
+  # Allow encrypted connections to openbroadwaydata.com
   server {
       listen 443 ssl;
       server_name openbroadwaydata.com;
       ssl_certificate "/etc/letsencrypt/live/openbroadwaydata.com/fullchain.pem";
       ssl_certificate_key "/etc/letsencrypt/live/openbroadwaydata.com/privkey.pem";
 
+      # Following configurations are for serving static content and as a reverse proxy.
       location / {
           # Define the location of the proxy server to send the request to
           proxy_pass http://0.0.0.0:5010;
@@ -45,11 +47,12 @@ http {
 
       }
   }
+  # Allow encrypted connections to www.openbroadwaydata.com
   server {
       listen 443 ssl;
       server_name www.openbroadwaydata.com;
-      ssl_certificate "/etc/letsencrypt/live/openbroadwaydata.com/fullchain.pem";
-      ssl_certificate_key "/etc/letsencrypt/live/openbroadwaydata.com/privkey.pem";
+      ssl_certificate "/etc/letsencrypt/live/www.openbroadwaydata.com/fullchain.pem";
+      ssl_certificate_key "/etc/letsencrypt/live/www.openbroadwaydata.com/privkey.pem";
 
       location / {
           # Define the location of the proxy server to send the request to
