some overprotectove config updates

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,9 @@ http {
 
       # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
       location / {
+          # The following allows flask to send urls to the domain name;
+          proxy_set_header Host $host;
+
           # Automatically route HTTP to HTTPS
           return 301 https://$server_name$request_uri;
 
@@ -25,6 +28,9 @@ http {
 
       # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
       location / {
+          # The following allows flask to send urls to the domain name;
+          proxy_set_header Host $host;
+
           # Automatically route HTTP to HTTPS
           return 301 https://$server_name$request_uri;
 
