allow admins to create roles

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
   # Redirect http traffic
   server {
       listen 80;
-      server_name openbroadwaydata.com;
+      server_name *openbroadwaydata.com;
 
       # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
       location / {
