--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,22 @@ aniso8601==8.0.0
 Babel==2.8.0
 bcrypt==3.1.7
 blinker==1.4
+Brotli==1.0.7
 certifi==2020.6.20
 cffi==1.14.1
 chardet==3.0.4
 click==7.1.2
+dash==1.14.0
+dash-core-components==1.10.2
+dash-html-components==1.0.3
+dash-renderer==1.6.0
+dash-table==4.9.0
 dnspython==2.0.0
 email-validator==1.1.1
 Flask==1.1.2
 Flask-BabelEx==0.9.4
 Flask-Caching==1.9.0
+Flask-Compress==1.5.0
 Flask-JWT-Extended==3.24.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
@@ -22,6 +29,7 @@ Flask-Script==2.0.6
 Flask-Security==3.0.0
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
+future==0.18.2
 greenlet==0.4.16
 idna==2.9
 itsdangerous==1.1.0
@@ -31,6 +39,7 @@ MarkupSafe==1.1.1
 numpy==1.19.0
 pandas==1.0.5
 passlib==1.7.2
+plotly==4.9.0
 pycparser==2.20
 PyJWT==1.7.1
 PyMySQL==0.9.3
@@ -38,6 +47,7 @@ python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.1
 requests==2.24.0
+retrying==1.3.3
 six==1.15.0
 speaklater==1.3
 SQLAlchemy==1.3.17
