--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,13 @@ http {
       # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
       location / {
           # The following allows flask to send urls to the domain name;
-          proxy_set_header Host $host;
+          proxy_set_header    Host                  $host;
+          # The following allows tracking and storing of IP addresses
+          proxy_set_header    X-Real-IP             $remote_addr;
+          proxy_set_header    X-Forwarded-For       $proxy_add_x_forwarded_for;
+          proxy_set_header    X-Forwarded-Proto     $scheme;
+
+          # proxy_pass http://x.x.x.x:8000;
 
           # Automatically route HTTP to HTTPS
           return 301 https://$server_name$request_uri;
@@ -29,7 +35,11 @@ http {
       # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
       location / {
           # The following allows flask to send urls to the domain name;
-          proxy_set_header Host $host;
+          proxy_set_header    Host                  $host;
+          # The following allows tracking and storing of IP addresses
+          proxy_set_header    X-Real-IP             $remote_addr;
+          proxy_set_header    X-Forwarded-For       $proxy_add_x_forwarded_for;
+          proxy_set_header    X-Forwarded-Proto     $scheme;
 
           # Automatically route HTTP to HTTPS
           return 301 https://$server_name$request_uri;
