--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,8 +20,6 @@ http {
           proxy_set_header    X-Forwarded-For       $proxy_add_x_forwarded_for;
           proxy_set_header    X-Forwarded-Proto     $scheme;
 
-          # proxy_pass http://x.x.x.x:8000;
-
           # Automatically route HTTP to HTTPS
           return 301 https://$server_name$request_uri;
 
@@ -58,8 +56,13 @@ http {
       location / {
           # Define the location of the proxy server to send the request to
           proxy_pass http://0.0.0.0:5010;
+
           # The following allows flask to send urls to the domain name;
-          proxy_set_header Host $host;
+          proxy_set_header    Host                  $host;
+          # The following allows tracking and storing of IP addresses
+          proxy_set_header    X-Real-IP             $remote_addr;
+          proxy_set_header    X-Forwarded-For       $proxy_add_x_forwarded_for;
+          proxy_set_header    X-Forwarded-Proto     $scheme;
 
       }
   }
@@ -73,9 +76,13 @@ http {
       location / {
           # Define the location of the proxy server to send the request to
           proxy_pass http://0.0.0.0:5010;
+          
           # The following allows flask to send urls to the domain name;
-          proxy_set_header Host $host;
-
+          proxy_set_header    Host                  $host;
+          # The following allows tracking and storing of IP addresses
+          proxy_set_header    X-Real-IP             $remote_addr;
+          proxy_set_header    X-Forwarded-For       $proxy_add_x_forwarded_for;
+          proxy_set_header    X-Forwarded-Proto     $scheme;
       }
   }
 
