--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
+nameparser==1.0.6
 numpy==1.19.0
 pandas==1.0.5
 passlib==1.7.2
