--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ Flask-Security==3.0.0
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
 future==0.18.2
+graphviz==0.14.2
 greenlet==0.4.16
 idna==2.9
 itsdangerous==1.1.0
@@ -42,8 +43,10 @@ pandas==1.0.5
 passlib==1.7.2
 plotly==4.9.0
 pycparser==2.20
+pydot==1.4.1
 PyJWT==1.7.1
 PyMySQL==0.9.3
+pyparsing==2.4.7
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.1
@@ -52,6 +55,7 @@ retrying==1.3.3
 six==1.15.0
 speaklater==1.3
 SQLAlchemy==1.3.17
+sqlalchemy-schemadisplay==1.3
 urllib3==1.25.9
 waitress==1.4.4
 Werkzeug==1.0.1
