fixing one tiny change with nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,9 +9,9 @@ http {
   # Redirect http traffic
   server {
       listen 80;
-      server_name *.openbroadwaydata.com;
+      server_name openbroadwaydata.com www.openbroadwaydata.com;
 
-      # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
+      # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
       location / {
           # The following allows flask to send urls to the domain name;
           proxy_set_header    Host                  $host;
@@ -26,29 +26,10 @@ http {
       }
   }
 
-  # server {
-  #     listen 80;
-  #     server_name www.openbroadwaydata.com;
-  #
-  #     # # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
-  #     location / {
-  #         # The following allows flask to send urls to the domain name;
-  #         proxy_set_header    Host                  $host;
-  #         # The following allows tracking and storing of IP addresses
-  #         proxy_set_header    X-Real-IP             $remote_addr;
-  #         proxy_set_header    X-Forwarded-For       $proxy_add_x_forwarded_for;
-  #         proxy_set_header    X-Forwarded-Proto     $scheme;
-  #
-  #         # Automatically route HTTP to HTTPS
-  #         return 301 https://$server_name$request_uri;
-  #
-  #     }
-  # }
-
   # Allow encrypted connections to openbroadwaydata.com
   server {
       listen 443 ssl;
-      server_name *.openbroadwaydata.com;
+      server_name openbroadwaydata.com www.openbroadwaydata.com;
       ssl_certificate "/etc/letsencrypt/live/openbroadwaydata.com/fullchain.pem";
       ssl_certificate_key "/etc/letsencrypt/live/openbroadwaydata.com/privkey.pem";
 
@@ -66,24 +47,6 @@ http {
 
       }
   }
-  # # Allow encrypted connections to www.openbroadwaydata.com
-  # server {
-  #     listen 443 ssl;
-  #     server_name www.openbroadwaydata.com;
-  #     ssl_certificate "/etc/letsencrypt/live/www.openbroadwaydata.com/fullchain.pem";
-  #     ssl_certificate_key "/etc/letsencrypt/live/www.openbroadwaydata.com/privkey.pem";
-  #
-  #     location / {
-  #         # Define the location of the proxy server to send the request to
-  #         proxy_pass http://0.0.0.0:5010;
-  #
-  #         # The following allows flask to send urls to the domain name;
-  #         proxy_set_header    Host                  $host;
-  #         # The following allows tracking and storing of IP addresses
-  #         proxy_set_header    X-Real-IP             $remote_addr;
-  #         proxy_set_header    X-Forwarded-For       $proxy_add_x_forwarded_for;
-  #         proxy_set_header    X-Forwarded-Proto     $scheme;
-  #     }
-  # }
+
 
 }
